[package]
name = "pusu"
version = "0.1.0"
edition = "2024"
description = "High-performance, fully static, event-driven architecture for Rust services"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
broker_macro = { path = "broker_macro" }
consumer_macro = { path = "consumer_macro" }
producer_macro = { path = "producer_macro" }
serde = { version = "1.0", features = ["derive"] }
postcard = {"version" = "1.1.3", features = ["use-std"]}
strum = { version = "0.27", features = ["derive"] }

[features]
default = ["broker", "consumer", "producer"]
broker = []
consumer = []
producer = []
