[package]
name = "pusu_consumer_macro"
version = "0.1.1"
edition = "2024"
description = "High-performance, fully static, event-driven architecture for Rust services"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
